# adventofcode2021

./: .gitignore  LICENSE  README.org  adventofcode2021.cabal  cabal.project  flake.nix
app/: Config.hs  Main.hs
lib/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Meh.hs  Parsers.hs  Task.hs
test/: doc.hs  spec.hs
