cabal-version:      3.0
name:               adventofcode2021
version:            0.1.0.0
synopsis:           Some advent of Code 2021 solutions
license:            MIT
license-file:       LICENSE
author:             Erlend Pedersen
maintainer:         erlendpe@online.no
copyright:          Erlend Pedersen 2021
category:           Toy

source-repository head
    type: git
    location: https://github.com/plutotulp/adventofcode2021.git

common def
    default-language: Haskell2010
    build-depends: base
                 , containers
                 , foldl
                 , generic-lens
                 , hspec
                 , hspec-core
                 , hspec-megaparsec
                 , interpolatedstring-perl6
                 , lens
                 , megaparsec
                 , primitive
                 , profunctors
                 , QuickCheck
                 , text
                 , transformers
                 , vector
    default-extensions: ApplicativeDo
                      , BinaryLiterals
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , FlexibleContexts
                      , GADTs
                      , LambdaCase
                      , MultiWayIf
                      , OverloadedLabels
                      , OverloadedLists
                      , OverloadedStrings
                      , PatternSynonyms
                      , QuasiQuotes
                      , ScopedTypeVariables
                      , TupleSections
                      , TypeApplications
                      , ViewPatterns
    ghc-options: -Wall

library
    import: def
    hs-source-dirs: lib
    exposed-modules: Day01
                   , Day02
                   , Day03
                   , Day04
                   , Day05
                   , Day06
                   , Day07
                   , Day08
                   , Day09
                   , Day10
                   , Day11
                   , Day12
                   , Day13
                   , Day14
                   , Day15
                   , Parsers
                   , Task
    -- other-modules:

executable aoc21
    import: def
    hs-source-dirs: app
    main-is: Main.hs
    other-modules: Config
    build-depends: adventofcode2021
                 , optparse-applicative
    ghc-options: -threaded -rtsopts=all

test-suite spec
    import: def
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        spec.hs
    ghc-options: -threaded -rtsopts=all
    build-depends: adventofcode2021

test-suite doc
    import: def
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        doc.hs
    ghc-options: -threaded -rtsopts=all
    build-depends: adventofcode2021
                 , doctest-parallel
